[package]
name = "rpki"
version = "0.18.4"
edition = "2021"
rust-version = "1.73"
authors = ["NLnet Labs <rpki-team@nlnetlabs.nl>"]
description = "A library for validating and creating RPKI data."
documentation = "https://docs.rs/rpki/"
homepage = "https://github.com/nlnetlabs/rpki-rs/"
repository = "https://github.com/NLnetLabs/rpki-rs"
keywords = ["rpki", "routing-security"]
categories = ["network-programming"]
license = "BSD-3-Clause"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
arbitrary       = { version = "1", optional = true, features = ["derive"] }
base64          = "0.22"
bcder           = { version = "0.7.3", optional = true }
bytes           = "1.0"
chrono          = { version = "0.4.35", features = [ "serde" ] }
futures-util    = { version = "0.3", optional = true }
log             = "0.4.7"
openssl         = { version = "0.10.23", optional = true }
quick-xml       = { version = "0.31.0", optional = true }
ring            = { version = "0.17.6", optional = true }
serde           = { version = "1.0.103", optional = true, features = [ "derive" ] }
serde_json      = { version = "1.0.40", optional = true }
tokio           = { version = "1.0", optional = true, features = ["io-util",  "net", "rt", "sync", "time"] }
uuid            = "1.1"
untrusted       = { version = "0.9", optional = true }

[dev-dependencies]
serde_json      = "1.0.40"
serde_test      = "1.0"
tokio           = { version="1.0", features=["net", "macros", "rt-multi-thread"]}
hyper           = { version = "1.3.1", features = ["server", "http1"] }
hyper-util      = { version = "0.1", features = ["server", "tokio"] }
http-body-util  = "0.1"
futures-util    = "0.3.31"
reqwest         = { version = "0.12.9", features = ["gzip", "stream", "blocking"] }


[features]
default = []

# Main components of the crate.
ca         = [ "repository", "serde-support", "rrdp" ]
crypto     = [ "bcder", "ring", "untrusted" ]
repository = [ "bcder", "crypto" ]
rrdp       = [ "xml", "ring" ]
rtr        = [ "futures-util", "tokio" ]
slurm      = [ "rtr", "serde-support", "serde_json" ]

# Feature that provides compatibility with (technically incorrect) objects
# produced by earlier versions of this library, which are rejected now.
compat = [ ]

# Dependent components of the crate.
xml = [ "quick-xml" ]

# Extra features provided.
arbitrary = ["dep:arbitrary", "chrono/arbitrary"]
serde-support = ["serde"]
softkeys = [ "openssl" ]

# Dummy features for Windows CI runs where we don’t want to have to deal
# with OpenSSL
__windows_ci_all = [ "ca", "rrdp", "rtr", "serde-support" ]

[[bin]]
name = "readcer"
required-features = [ "repository" ]

[[bin]]
name = "readmft"
required-features = [ "repository" ]

[[bin]]
name = "readroa"
required-features = [ "repository" ]

