[package]
name = "rpki"
version = "0.20.0-dev"
rust-version = "1.85"
edition = "2021"
resolver = "3" # Can be removed when edition becomes 2024.
authors = ["NLnet Labs <rpki-team@nlnetlabs.nl>"]
description = "A library for validating and creating RPKI data."
documentation = "https://docs.rs/rpki/"
homepage = "https://github.com/nlnetlabs/rpki-rs/"
repository = "https://github.com/NLnetLabs/rpki-rs"
keywords = ["rpki", "routing-security"]
categories = ["network-programming"]
license = "BSD-3-Clause"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
base64          = "0.22"
bytes           = "1.11"
log             = "0.4.7"
uuid            = "1.1"

arbitrary       = { version = "1", optional = true, features = ["derive"] }
bcder           = { version = "0.7.6", optional = true, git = "https://github.com/NLnetLabs/bcder.git", branch = "rsc-support"}
chrono          = { version = "0.4.35", features = [ "serde" ] }
futures-util    = { version = "0.3", optional = true }
num-bigint      = { version = "0.4.6", optional = true }
quick-xml       = { version = "0.39.0", optional = true }
aws-lc-rs       = { version = "1.16.2", optional = true }
serde           = { version = "1.0.103", optional = true, features = [ "derive" ] }
serde_json      = { version = "1.0.40", optional = true }
tokio           = { version = "1.0", optional = true, features = ["io-util",  "net", "rt", "sync", "time"] }

[dev-dependencies]
serde_json      = "1.0.40"
serde_test      = "1.0"
tokio           = { version="1.0", features=["net", "macros", "rt-multi-thread"]}
hyper           = { version = "1.3.1", features = ["server", "http1"] }
hyper-util      = { version = "0.1", features = ["server", "tokio"] }
http-body-util  = "0.1"
futures-util    = "0.3.31"
reqwest         = { version = "0.13.1", features = ["gzip", "stream", "blocking"] }


[features]
default = [ "repository", "rrdp" ]

# Main components of the crate.
ca         = [ "repository", "serde-support", "rrdp" ]
crypto     = [ "bcder", "aws-lc-rs" ]
repository = [ "bcder", "crypto" ]
rrdp       = [ "xml", "aws-lc-rs" ]
rtr        = [ "futures-util", "tokio" ]
slurm      = [ "rtr", "serde-support", "serde_json" ]

# Feature that provides compatibility with (technically incorrect) objects
# produced by earlier versions of this library, which are rejected now.
compat = [ ]

# Dependent components of the crate.
xml = [ "quick-xml" ]

# Extra features provided.
arbitrary = ["dep:arbitrary", "chrono/arbitrary"]
serde-support = ["serde"]
softkeys = [ "aws-lc-rs" ]

# Dummy features for Windows CI runs where we don’t want to have to deal
# with OpenSSL
__windows_ci_all = [ "ca", "rrdp", "rtr", "serde-support" ]

[[bin]]
name = "readcer"
required-features = [ "repository" ]

[[bin]]
name = "readmft"
required-features = [ "repository" ]

[[bin]]
name = "readroa"
required-features = [ "repository" ]

